# Sovereign-Digital-Governance-Stack

./: README.md
csic/: .gitignore  INTEGRATION_TEST_REPORT.md  LICENSE.md  MODULES_SUMMARY.md  README.md  README_COMPARISON.md  workspace.json
csic/blockchain/indexer/: Dockerfile  README.md  docker-compose.yml  go.mod
csic/blockchain/nodes/: Dockerfile  README.md  docker-compose.yml  go.mod
csic/compliance/: go.mod  main.go
csic/deployments/on-prem/: k8s-deployment.yaml
csic/docs/: P2_MODULES_IMPLEMENTATION_SUMMARY.md  SECURITY_MODULES_DOCUMENTATION.md  audit-log-spec.md  compliance-mapping.md  data-flow-diagrams.md  disaster-recovery.md  incident-response.md  system-overview.md  threat-model.md
csic/exchange/surveillance/: surveillance.go
csic/extended-service/: README.md
csic/extended-service/cbdc-monitoring/: Dockerfile  README.md  config.yaml  docker-compose.yml  go.mod
csic/extended-service/defense-telemetry/: Dockerfile  README.md  config.yaml  docker-compose.yml  go.mod  prometheus.yml
csic/extended-service/energy-optimization/: Dockerfile  README.md  config.yaml  docker-compose.yml  go.mod  prometheus.yml
csic/extended-service/financial-crime-unit/: Dockerfile  README.md  config.yaml  docker-compose.yml  go.mod  prometheus.yml
csic/extended-service/national-identity/: Dockerfile  README.md  config.yaml  docker-compose.yml  go.mod  prometheus.yml
csic/extended-service/smart-cities/: Dockerfile  README.md  config.yaml  docker-compose.yml  go.mod  prometheus.yml
csic/frontend/: index.html  package-lock.json  package.json  test.js  vite.config.ts
csic/frontend/admin-dashboard/: Dashboard.tsx  index.html  package.json
csic/frontend/dashboard/: .env.example  .gitignore  Dockerfile  Dockerfile.dev  IMPLEMENTATION_SUMMARY.md  README.md  docker-compose.yml  index.html  nginx.conf  package.json  tailwind.config.js  vite.config.ts
csic/frontend/incident-console/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
csic/frontend/regulator-dashboard/: index.html  package-lock.json  package.json  tailwind.config.js
csic/frontend/src/: App.css  App.tsx  main.tsx
csic/policies/: crypto-policy.yaml
csic/scripts/backup/: backup-full.sh
csic/security/e2e-encryption/: Dockerfile  README.md  config.yaml  docker-compose.yml  go.mod
csic/security/iam/: iam_service.go
csic/service/licensing/: Dockerfile  README.md  config.yaml  docker-compose.yml  go.mod
csic/service/reporting/: Dockerfile  README.md  config.yaml  docker-compose.yml  go.mod
csic/service/security/: go.mod
csic/services/: IMPLEMENTATION_SUMMARY.md
csic/services/api-gateway/: Dockerfile  README.md  config.yaml  docker-compose.yml  go.mod  handlers.go  main.go
csic/services/audit-log/: Dockerfile  audit_service.go  config.yaml  docker-compose.yml  go.mod  handlers.go  main.go
csic/services/compliance/: Dockerfile  README.md  config.yaml  docker-compose.yml  go.mod  go.sum  verify_test.go
csic/services/control-layer/: Dockerfile  docker-compose.yml  go.mod
csic/services/cwgs/: Cargo.toml  Dockerfile  config.yaml  docker-compose.yml  main.go
csic/services/cwgs/internal/core/domain/: models.go
csic/services/cwgs/migrations/: 001_init_schema.sql
csic/services/cwgs/src/: main.rs
csic/services/cwgs/src/api/: http.rs
csic/services/cwgs/src/application/: services.rs
csic/services/cwgs/src/domain/: audit.rs  crypto.rs  mod.rs  policy.rs  wallet.rs
csic/services/cwgs/src/infrastructure/: hsm_kafka.rs
csic/services/cwgs/src/infrastructure/persistence/: postgres.rs
csic/services/energy-integration/: Dockerfile  config.yaml  docker-compose.yml  go.mod  prometheus.yml
csic/shell_output_save/: reports"_1767860237.txt
csic/user_input_files/: pasted-text-2026-01-06T10-45-23.txt  pasted-text-2026-01-07T06-44-16.txt  pasted-text-2026-01-08T06-06-27.txt
docs/: Policy-Whitepaper.md  SAFE-Demonstration.md  Sovereign-Digital-Governance-Stack.md  Strategic-Implementation-Summary.md  audit-framework.md  compliance-mapping.md  data-classification.md  governance-model.md  inter-system-signals.md  sdgs-overview.md  security-architecture.md
neam/: .gitignore  GOVERNANCE.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  go.mod  go.sum
neam/audit-service/: Dockerfile  docker-compose.yml  main.go
neam/black-economy/: Dockerfile  go.mod  main.go
neam/charts/: CONFIGURATION_SUMMARY.md  DEPLOYMENT_GUIDE.md  LIBRARY_INFRASTRUCTURE.md  deploy-dev.sh  deploy-prod.sh  deploy-staging.sh  kustomization.yaml  validate-charts.sh
neam/dashboard/: Dockerfile  nginx.conf  package.json
neam/deployments/: docker-compose.yml
neam/docs/: ARCHITECTURE.md  COMPLIANCE.md
neam/feature-store/: Dockerfile  go.mod  main.go
neam/frontend/: Dockerfile  nginx.conf  package.json
neam/gateway/: nginx.conf
neam/industry/: output-index.go
neam/integration-gateway/: Dockerfile  docker-compose.yml  main.go
neam/intelligence/: Dockerfile  engine.go  go.mod  main.go
neam/intervention/: Dockerfile  README.md  docker-compose.yml  go.mod  go.sum  main.go  run_tests.sh  workflow_test.go
neam/macro/: Dockerfile  go.mod  go.sum  main.go
neam/monitoring/: prometheus.yml
neam/policy/: alerts.go  engine.go  state.go  workflow.go
neam/reporting/: Dockerfile  README.md  config.go  docker-compose.yml  go.mod  main.go
neam/scripts/: run-payment-adapter.sh
neam/security/: main.go
neam/sensing/: Dockerfile  ingestion.go  main.go
neam/services/: Dockerfile
neam/shared/: go.mod  go.sum  shared.go
neam/simulation/: Dockerfile  README.md  __init__.py  config.yaml  main.py  pyproject.toml  requirements.txt
neam/simulation/engines/: __init__.py  base.py  economic_model.py  monte_carlo.py  scenario.py  sensitivity.py
neam/simulation/models/: __init__.py  simulation.py
neam/simulation/routes/: __init__.py  health.py  simulation.py
neam/simulation/tests/: __init__.py  test_simulation.py
neam/tests/: README.md  config.yaml  conftest.py  docker-compose.test.yml  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh
(+1255 files in other folders)
