[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neam-simulation"
version = "1.0.0"
description = "NEAM Platform - Python Simulation Service for What-If Analysis and Scenario Simulation"
readme = "README.md"
license = {text = "Proprietary"}
requires-python = ">=3.10"
authors = [
    {name = "NEAM Development Team"}
]
keywords = [
    "economics",
    "simulation",
    "forecasting",
    "monte-carlo",
    "sensitivity-analysis",
    "policy-analysis",
    "scenario-planning"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Government",
    "License :: Proprietary",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Economics"
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.11.0",
    "statsmodels>=0.14.0",
    "orjson>=3.9.0",
    "python-dateutil>=2.8.0",
    "redis>=5.0.0",
    "asyncpg>=0.29.0",
    "sqlalchemy>=2.0.0",
    "aiokafka>=0.9.0",
    "pyyaml>=6.0.0",
    "httpx>=0.25.0",
    "structlog>=23.2.0",
    "python-json-logger>=2.0.0",
    "numba>=0.58.0",
    "bottleneck>=1.3.7",
    "arch>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.6.0",
    "pre-commit>=3.5.0",
]

test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.25.0",
    "fakeredis>=2.20.0",
]

docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocstrings[python]>=0.23.0",
]

[project.scripts]
neam-simulation = "simulation.main:main"

[project.urls]
Homepage = "https://github.com/neam-platform/neam-platform"
Repository = "https://github.com/neam-platform/neam-platform"
Issues = "https://github.com/neam-platform/neam-platform/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["simulation*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--cov=simulation",
    "--cov-report=term-missing",
    "--cov-report=html"
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]

[tool.black]
line-length = 100
target-version = ['py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.tox
    | \.venv
    | venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip = [".venv", "venv"]
known_first_party = ["simulation"]

[tool.flake8]
max-line-length = 100
extend-ignore = "E203"
exclude = [".git", "__pycache__", ".venv", "venv", "build", "dist"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true

[tool.coverage.run]
source = ["simulation"]
omit = [
    "tests/*",
    "*/tests/*",
    "**/__pycache__/**"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"tests/*" = ["S", "B", "C4"]
"__init__.py" = ["F401"]

[tool.pre-commit-config]
repos = [
    {
        repo = "https://github.com/pre-commit/pre-commit-hooks",
        rev = "v4.5.0",
        hooks = [
            {"id": "trailing-whitespace"},
            {"id": "end-of-file-fixer"},
            {"id": "check-yaml"},
            {"id": "check-added-large-files"},
            {"id": "detect-private-key"},
        ],
    },
    {
        repo = "https://github.com/psf/black",
        rev = "23.11.0",
        hooks = [{"id": "black"}],
    },
    {
        repo = "https://github.com/pycqa/isort",
        rev = "5.12.0",
        hooks = [{"id": "isort"}],
    },
    {
        repo = "https://github.com/pycqa/flake8",
        rev = "6.1.0",
        hooks = [{"id": "flake8"}],
    },
    {
        repo = "https://github.com/pre-commit/mirrors-mypy",
        rev = "v1.7.0",
        hooks = [{"id": "mypy"}],
    },
]

[tool.poetry]
name = "neam-simulation"
version = "1.0.0"
description = "NEAM Platform - Python Simulation Service"
authors = ["NEAM Development Team"]
readme = "README.md"
license = "Proprietary"
keywords = ["economics", "simulation", "forecasting", "monte-carlo"]
