[package]
name = "csic-cwgs"
version = "1.0.0"
edition = "2021"
description = "CSIC Custodial Wallet Governance System - State-approved wallet framework with multi-signature governance"

[features]
default = ["soft-hsm"]
soft-hsm = ["dep:softhsm2"]
pkcs11 = ["dep:cryptoki"]

[dependencies]
# Async runtime
tokio = { version = "1.32", features = ["full"] }
async-trait = "0.1"

# Web frameworks
axum = "0.7"
tower = "0.4"
warp = "0.3"

# gRPC
tonic = "0.11"
prost = "0.12"
prost-types = "0.12"

# Database
sqlx = { version = "0.7", features = ["postgres", "uuid", "chrono", "bigdecimal"] }
deadpool = "0.10"
bb8 = "0.8"

# Kafka
rdkafka = { version = "0.34", features = ["cmake-build"] }
kafka-clients = "0.3"

# Configuration
config = "0.13"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Cryptography
secp256k1 = "0.28"
bitcoin = "0.31"
ethers = "2.0"
sha2 = "0.10"
hmac = "0.12"
cryptographic-message-syntax = "0.4"
pkcs8 = "0.10"

# HSM Integration (optional)
cryptoki = { version = "0.6", optional = true }
softhsm2 = { version = "0.5", optional = true }

# Utilities
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
regex = "1.10"
thiserror = "1.0"
anyhow = "1.0"
once_cell = "1.19"
dashmap = "6.0"

# Logging and metrics
tracing = "0.1"
tracing-subscriber = "0.3"
metrics = "0.21"
metrics-exporter-prometheus = "0.13"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Security
zeroize = "1.7"

[dev-dependencies]
rstest = "0.18"
tempfile = "3.9"
assert_matches = "1.5"

[build-dependencies]
tonic-build = "0.11"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[workspace]
members = []
